--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "gatsby": "^2.26.1",
     "gatsby-plugin-typography": "^2.12.0",
     "react": "^16.12.0",
@@ -24,6 +25,7 @@
     "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
+    "gatsby-plugin-material-ui": "^2.1.10",
     "prettier": "2.2.1"
   },
   "repository": {
