--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "gatsby": "^2.26.1",
-    "gatsby-plugin-typography": "^2.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^4.2.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
